--- a/public/administrator/student.html
+++ b/public/administrator/student.html
@@ -203,11 +203,17 @@
                         var td3 = tr.insertCell(2);
                         var td4 = tr.insertCell(3);
                         var td5 = tr.insertCell(4);
+                        var td6 = tr.insertCell(5);
+                        var td7 = tr.insertCell(6);
+                        var td8 = tr.insertCell(7);
                         td1.innerText = data.result[i].sid;
                         td2.innerText = data.result[i].sname;
                         td3.innerText = data.result[i].sage;
                         td4.innerText = data.result[i].ssex;
-                        td5.innerHTML = '<td class="text-center">' +
+                        td5.innerText = data.result[i].semail;
+                        td6.innerText = data.result[i].saddress;
+                        td7.innerText = data.result[i].snumber;
+                        td8.innerHTML = '<td class="text-center">' +
                                 '<a class="btn btn-info btn-xs" data-toggle="modal" data-target="#editStudentModel" id=' + data.result[i].tid + ' onclick=editStudent()>' +
                                 '<span class="glyphicon glyphicon-edit"></span> Edit</a> ' +
                                 '<a class="btn btn-danger btn-xs" onclick=deleteStudent()>' +
@@ -223,6 +229,9 @@
     var sname;
     var sage;
     var ssex;
+    var semail;
+    var saddress;
+    var snumber;
 
     function editStudent() {
         $("tr").click(function () {
@@ -231,12 +240,18 @@
             sname = students.result[id].sname;
             sage = students.result[id].sage;
             ssex = students.result[id].ssex;
+            semail = students.result[id].semail;
+            saddress = students.result[id].saddress;
+            snumber = students.result[id].snumber;
 
             $("#sid").val(sid);
             $('#sid').attr("readonly", "readonly");
             $("#sname").val(sname);
             $("#sage").val(sage);
             $("#ssex").val(ssex);
+            $("#semail").val(semail);
+            $("#saddress").val(saddress);
+            $("#snumber").val(snumber);
         });
     }
 
@@ -245,6 +260,9 @@
         var sname = document.getElementById("sname").value;
         var sage = document.getElementById("sage").value;
         var ssex = document.getElementById("ssex").value;
+        var semail = document.getElementById("semail").value;
+        var snumber = document.getElementById("snumber").value;
+        var saddress = document.getElementById("saddress").value;
 
         $.ajax({
             url: 'http://localhost:3000/student/updateStudent',
@@ -255,7 +273,10 @@
                 sid: sid,
                 sname: sname,
                 sage: sage,
-                ssex: ssex
+                ssex: ssex,
+                semail: semail,
+                saddress: saddress,
+                snumber: snumber
             },
             success: function (data, status, xhr) {
                 console.log(data);
@@ -298,10 +319,12 @@
 
     function addStudent() {
         var sid_add = document.getElementById("sid_add").value;
-        alert(sid_add)
         var sname_add = document.getElementById("sname_add").value;
         var sage_add = document.getElementById("sage_add").value;
         var ssex_add = document.getElementById("ssex_add").value;
+        var semail_add = document.getElementById("semail_add").value;
+        var saddress_add = document.getElementById("saddress_add").value;
+        var snumber_add = document.getElementById("snumber_add").value;
 
         $.ajax({
             url: 'http://localhost:3000/student/addStudent',
@@ -311,7 +334,10 @@
                 sid: sid_add,
                 sname: sname_add,
                 sage: sage_add,
-                ssex: ssex_add
+                ssex: ssex_add,
+                semail: semail_add,
+                saddress: saddress_add,
+                snumber: snumber_add
             },
             success: function (data, status, xhr) {
                 console.log(data);
@@ -339,13 +365,17 @@
                 console.log(data.status)
                 teachers = data;
                 var cour = "";
-                cour += '<tr> <td>学生ID</td> <td>姓名</td> <td>年龄</td> <td>性别</td> <td>action</td></tr>';
+                cour += '<tr> <td>学生ID</td> <td>姓名</td> <td>年龄</td> <td>性别</td>' +
+                        '<td>邮箱</td><td>地址</td> <td>电话</td> <td>action</td></tr>';
                 if (status === "success" && data.status === 1) {
                     for (var i = 0; i < data.result.length; i++) {
                         cour += '<tr id=' + i + '> <td>' + data.result[i].sid + '</td>' +
                                 '<td>' + data.result[i].sname + '</td>' +
                                 ' <td>' + data.result[i].sage + '</td> ' +
                                 '<td>' + data.result[i].ssex + '</td> ' +
+                                '<td>' + data.result[i].semail + '</td> ' +
+                                '<td>' + data.result[i].saddress + '</td> ' +
+                                '<td>' + data.result[i].snumber + '</td> ' +
                                 '<td class="text-center">' +
                                 '<a class="btn btn-info btn-xs" data-toggle="modal" data-target="#editStudentModel" id=' + data.result[i].tid + ' onclick=editStudent()>' +
                                 '<span class="glyphicon glyphicon-edit"></span> Edit</a> ' +
@@ -355,7 +385,7 @@
                     document.getElementById("mytable").innerHTML = cour;
                 }
                 else {
-                    document.getElementById("").innerHTML = "";
+                    document.getElementById("mytable").innerHTML = "查询不到任何信息";
                 }
             }
         });
@@ -464,6 +494,9 @@
                         <td>姓名</td>
                         <td>年龄</td>
                         <td>性别</td>
+                        <td>邮箱</td>
+                        <td>地址</td>
+                        <td>电话</td>
                         <td>action</td>
                     </tr>
                     </tbody>
@@ -500,13 +533,62 @@
 
                         <label class="control-label">年龄</label>
 
-                        <input id="sage_add" type="text" name="password" class="form-control"/>
+                        <span style="margin-left:172px;overflow:hidden">
+                        <select style="width:190px" id="sage_add"
+                                onchange="this.parentNode.nextSibling.value=this.value" class="form-control">
+                            <option value='20'>20</option><option value='21'>21</option><option value='22'>22</option><option
+                                value='23'>23</option><option value='24'>24</option><option value='25'>25</option><option
+                                value='26'>26</option><option value='27'>27</option><option value='28'>28</option><option
+                                value='29'>29</option><option value='30'>30</option><option value='31'>31</option><option
+                                value='32'>32</option><option value='33'>33</option><option value='34'>34</option><option
+                                value='35'>35</option><option value='36'>36</option><option value='37'>37</option><option
+                                value='38'>38</option><option value='39'>39</option><option value='40'>40</option><option
+                                value='41'>41</option><option value='42'>42</option><option value='43'>43</option><option
+                                value='44'>44</option><option value='45'>45</option><option value='46'>46</option><option
+                                value='47'>47</option><option value='48'>48</option><option value='49'>49</option><option
+                                value='50'>50</option><option value='51'>51</option><option value='52'>52</option><option
+                                value='53'>53</option><option value='54'>54</option><option value='55'>55</option><option
+                                value='56'>56</option><option value='57'>57</option><option value='58'>58</option><option
+                                value='59'>59</option><option value='60'>60</option><option value='61'>61</option><option
+                                value='62'>62</option><option value='63'>63</option><option value='64'>64</option><option
+                                value='65'>65</option><option value='66'>66</option><option value='67'>67</option><option
+                                value='68'>68</option><option value='69'>69</option><option value='70'>70</option><option
+                                value='71'>71</option><option value='72'>72</option><option value='73'>73</option><option
+                                value='74'>74</option><option value='75'>75</option><option value='76'>76</option><option
+                                value='77'>77</option><option value='78'>78</option><option value='79'>79</option><option
+                                value='80'>80</option>
+                        </select>
+                        </span>
                     </div>
                     <div class="form-group">
 
                         <label class="control-label">性别</label>
 
-                        <input id="ssex_add" type="text" name="password" class="form-control"/>
+                        <span style="margin-left:172px;width:18px;overflow:hidden">
+                        <select style="width:190px" id="ssex_add"
+                                onchange="this.parentNode.nextSibling.value=this.value" class="form-control">
+                            <option value="M">M</option>
+                            <option value="F">F</option>
+                        </select>
+                        </span>
+                    </div>
+                    <div class="form-group">
+
+                        <label class="control-label">邮箱</label>
+
+                        <input id="semail_add" type="text" name="password" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+
+                        <label class="control-label">地址</label>
+
+                        <input id="saddress_add" type="text" name="password" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+
+                        <label class="control-label">电话</label>
+
+                        <input id="snumber_add" type="text" name="password" class="form-control"/>
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -550,7 +632,31 @@
 
                         <label class="control-label">性别</label>
 
-                        <input id="ssex" type="text" class="form-control"/>
+                        <span style="margin-left:172px;width:18px;overflow:hidden">
+                        <select style="width:190px" id="ssex"
+                                onchange="this.parentNode.nextSibling.value=this.value" class="form-control">
+                            <option value="M">M</option>
+                            <option value="F">F</option>
+                        </select>
+                        </span>
+                    </div>
+                    <div class="form-group">
+
+                        <label class="control-label">邮箱</label>
+
+                        <input id="semail" type="text" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+
+                        <label class="control-label">地址</label>
+
+                        <input id="saddress" type="text" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+
+                        <label class="control-label">电话</label>
+
+                        <input id="snumber" type="text" class="form-control"/>
                     </div>
                 </div>
                 <div class="modal-footer">
