--- a/public/administrator/teacher.html
+++ b/public/administrator/teacher.html
@@ -204,11 +204,17 @@
                         var td3 = tr.insertCell(2);
                         var td4 = tr.insertCell(3);
                         var td5 = tr.insertCell(4);
+                        var td6 = tr.insertCell(5);
+                        var td7 = tr.insertCell(6);
+                        var td8 = tr.insertCell(7);
                         td1.innerText = data.result[i].tid;
                         td2.innerText = data.result[i].tname;
                         td3.innerText = data.result[i].tage;
                         td4.innerText = data.result[i].tsex;
-                        td5.innerHTML = '<td class="text-center">' +
+                        td5.innerText = data.result[i].temail;
+                        td6.innerText = data.result[i].taddress;
+                        td7.innerText = data.result[i].tnumber;
+                        td8.innerHTML = '<td class="text-center">' +
                                 '<a class="btn btn-info btn-xs" data-toggle="modal" data-target="#editTeacherModel" id=' + data.result[i].tid + ' onclick=editTeacher()>' +
                                 '<span class="glyphicon glyphicon-edit"></span> Edit</a> ' +
                                 '<a class="btn btn-danger btn-xs" onclick=deleteTeacher()>' +
@@ -217,13 +223,16 @@
                 }
             }
         });
-    }
+    };
 
     var id;
     var tid;
     var tname;
     var tage;
     var tsex;
+    var temail;
+    var taddress;
+    var tnumber;
 
     function editTeacher() {
         $("tr").click(function () {
@@ -232,12 +241,18 @@
             tname = teachers.result[id].tname;
             tage = teachers.result[id].tage;
             tsex = teachers.result[id].tsex;
+            temail = teachers.result[id].temail;
+            taddress = teachers.result[id].taddress;
+            tnumber = teachers.result[id].tnumber;
 
             $("#tid").val(tid);
             $('#tid').attr("readonly", "readonly");
             $("#tname").val(tname);
             $("#tage").val(tage);
             $("#tsex").val(tsex);
+            $("#temail").val(temail);
+            $("#taddress").val(taddress);
+            $("#tnumber").val(tnumber);
         });
     }
 
@@ -246,6 +261,9 @@
         var tname = document.getElementById("tname").value;
         var tage = document.getElementById("tage").value;
         var tsex = document.getElementById("tsex").value;
+        var temail = document.getElementById("temail").value;
+        var tnumber = document.getElementById("tnumber").value;
+        var taddress = document.getElementById("taddress").value;
 
         $.ajax({
             url: 'http://localhost:3000/teacher/updateTeacher',
@@ -255,8 +273,11 @@
             data: {
                 tid: tid,
                 tname: tname,
-                tage: parseInt(tage),
-                tsex: tsex
+                tage: tage,
+                tsex: tsex,
+                temail: temail,
+                taddress: taddress,
+                tnumber: tnumber
             },
             success: function (data, status, xhr) {
                 console.log(data);
@@ -302,6 +323,9 @@
         var tname_add = document.getElementById("tname_add").value;
         var tage_add = document.getElementById("tage_add").value;
         var tsex_add = document.getElementById("tsex_add").value;
+        var temail_add = document.getElementById("temail_add").value;
+        var taddress_add = document.getElementById("taddress_add").value;
+        var tnumber_add = document.getElementById("tnumber_add").value;
 
         $.ajax({
             url: 'http://localhost:3000/teacher/addTeacher',
@@ -311,7 +335,10 @@
                 tid: tid_add,
                 tname: tname_add,
                 tage: tage_add,
-                tsex: tsex_add
+                tsex: tsex_add,
+                temail: temail_add,
+                taddress: taddress_add,
+                tnumber: tnumber_add
             },
             success: function (data, status, xhr) {
                 console.log(data);
@@ -336,16 +363,20 @@
                 search: search
             },
             success: function (data, status, xhr) {
-                console.log(data.status)
+                console.log(data.status);
                 teachers = data;
                 var cour = "";
-                cour += '<tr> <td>教师ID</td> <td>姓名</td> <td>年龄</td> <td>性别</td> <td>action</td></tr>';
+                cour += '<tr> <td>教师ID</td> <td>姓名</td> <td>年龄</td> <td>性别</td> ' +
+                        '<td>邮箱</td> <td>地址</td> <td>电话</td><td>action</td></tr>';
                 if (status === "success" && data.status === 1) {
                     for (var i = 0; i < data.result.length; i++) {
                         cour += '<tr id=' + i + '> <td>' + data.result[i].tid + '</td>' +
                                 '<td>' + data.result[i].tname + '</td>' +
                                 ' <td>' + data.result[i].tage + '</td> ' +
                                 '<td>' + data.result[i].tsex + '</td> ' +
+                                '<td>' + data.result[i].temail + '</td> ' +
+                                '<td>' + data.result[i].taddress + '</td> ' +
+                                '<td>' + data.result[i].tnumber + '</td> ' +
                                 '<td class="text-center">' +
                                 '<a class="btn btn-info btn-xs" data-toggle="modal" data-target="#editTeacherModel" id=' + data.result[i].tid + ' onclick=editTeacher()>' +
                                 '<span class="glyphicon glyphicon-edit"></span> Edit</a> ' +
@@ -355,7 +386,7 @@
                     document.getElementById("mytable").innerHTML = cour;
                 }
                 else {
-                    document.getElementById("").innerHTML = "";
+                    document.getElementById("mytable").innerHTML = "什么也没有查到";
                 }
             }
         });
@@ -365,7 +396,6 @@
 <body>
 <div id="throbber" style="display:none; min-height:120px;"></div>
 <div id="noty-holder"></div>
-
 
 <div id="wrapper">
 
@@ -456,7 +486,8 @@
         <div class="row text-center">
             <div class="col-md-12 dashhead">
                 <h1> Welcome To teacher</h1>
-                <button class="glyphicon glyphicon-plus" data-toggle="modal" data-target="#addTeacherModel"></button>
+                <button class="glyphicon glyphicon-plus" data-toggle="modal" data-target="#addTeacherModel"
+                        id="addModel"></button>
 
                 <table class="table table-striped" id="mytable">
                     <tbody>
@@ -465,6 +496,9 @@
                         <td>姓名</td>
                         <td>年龄</td>
                         <td>性别</td>
+                        <td>邮箱</td>
+                        <td>地址</td>
+                        <td>电话</td>
                         <td>action</td>
                     </tr>
                     </tbody>
@@ -501,13 +535,62 @@
 
                         <label class="control-label">年龄</label>
 
-                        <input id="tage_add" type="text" name="password" class="form-control"/>
+                        <span style="margin-left:172px;overflow:hidden">
+                        <select style="width:190px" id="tage_add"
+                                onchange="this.parentNode.nextSibling.value=this.value" class="form-control">
+                            <option value='20'>20</option><option value='21'>21</option><option value='22'>22</option><option
+                                value='23'>23</option><option value='24'>24</option><option value='25'>25</option><option
+                                value='26'>26</option><option value='27'>27</option><option value='28'>28</option><option
+                                value='29'>29</option><option value='30'>30</option><option value='31'>31</option><option
+                                value='32'>32</option><option value='33'>33</option><option value='34'>34</option><option
+                                value='35'>35</option><option value='36'>36</option><option value='37'>37</option><option
+                                value='38'>38</option><option value='39'>39</option><option value='40'>40</option><option
+                                value='41'>41</option><option value='42'>42</option><option value='43'>43</option><option
+                                value='44'>44</option><option value='45'>45</option><option value='46'>46</option><option
+                                value='47'>47</option><option value='48'>48</option><option value='49'>49</option><option
+                                value='50'>50</option><option value='51'>51</option><option value='52'>52</option><option
+                                value='53'>53</option><option value='54'>54</option><option value='55'>55</option><option
+                                value='56'>56</option><option value='57'>57</option><option value='58'>58</option><option
+                                value='59'>59</option><option value='60'>60</option><option value='61'>61</option><option
+                                value='62'>62</option><option value='63'>63</option><option value='64'>64</option><option
+                                value='65'>65</option><option value='66'>66</option><option value='67'>67</option><option
+                                value='68'>68</option><option value='69'>69</option><option value='70'>70</option><option
+                                value='71'>71</option><option value='72'>72</option><option value='73'>73</option><option
+                                value='74'>74</option><option value='75'>75</option><option value='76'>76</option><option
+                                value='77'>77</option><option value='78'>78</option><option value='79'>79</option><option
+                                value='80'>80</option>
+                        </select>
+                        </span>
                     </div>
                     <div class="form-group">
 
                         <label class="control-label">性别</label>
+                        <span style="margin-left:172px;width:18px;overflow:hidden">
+                        <select style="width:190px" id="tsex_add"
+                                onchange="this.parentNode.nextSibling.value=this.value" class="form-control">
+                            <option value="M">M</option>
+                            <option value="F">F</option>
+                        </select>
+                        </span>
+                    </div>
 
-                        <input id="tsex_add" type="text" name="password" class="form-control"/>
+                    <div class="form-group">
+
+                        <label class="control-label">邮箱</label>
+
+                        <input id="temail_add" type="text" name="password" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+
+                        <label class="control-label">地址</label>
+
+                        <input id="taddress_add" type="text" name="password" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+
+                        <label class="control-label">电话</label>
+
+                        <input id="tnumber_add" type="text" name="password" class="form-control"/>
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -551,7 +634,31 @@
 
                         <label class="control-label">性别</label>
 
-                        <input id="tsex" type="text" class="form-control"/>
+                        <span style="margin-left:172px;width:18px;overflow:hidden">
+                        <select style="width:190px" id="tsex"
+                                onchange="this.parentNode.nextSibling.value=this.value" class="form-control">
+                            <option value="M">M</option>
+                            <option value="F">F</option>
+                        </select>
+                        </span>
+                    </div>
+                    <div class="form-group">
+
+                        <label class="control-label">邮箱</label>
+
+                        <input id="temail" type="text" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+
+                        <label class="control-label">地址</label>
+
+                        <input id="taddress" type="text" class="form-control"/>
+                    </div>
+                    <div class="form-group">
+
+                        <label class="control-label">电话</label>
+
+                        <input id="tnumber" type="text" class="form-control"/>
                     </div>
                 </div>
                 <div class="modal-footer">
